# stoma

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/instructions/: chinese.instructions.md  constants.instructions.md  docstring.instructions.md
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/specs/001-create-stoma/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-create-stoma/contracts/: stoma-make.openapi.yaml
.specify/specs/001-create-stoma/reports/: PYDANTIC_V2_FINDINGS.md  T012-validation-report.md
.specify/specs/001-generate-api/: spec.md  tasks.md
examples/: decorator_demo.py
specs/001-generate-api/: plan.md  research.md  spec.md  tasks.md
specs/001-generate-api/checklists/: requirements.md
specs/001-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp/contracts/: openapi.yaml
specs/mvp/: spec.md
src/: __init__.py  exceptions.py  params.py  routing.py  test_api.py
tests/integration/: test_decorator_validation.py
tests/unit/: test_param_collection.py  test_params.py
