[project]
name = "stoma"
version = "0.1.0"
description = "An interface automation testing framework inspired by FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true