[project]
name = "stoma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core testing and runtime deps
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    # OpenAPI handling and typing
    "openapi-schema-pydantic>=1.2.4",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.2",
    "jsonschema>=4.0.0",
    # CLI
    "typer>=0.9.0",
    # Reporting (optional)
    "allure-pytest>=2.15.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.8.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# 测试文件可以放宽某些类型检查
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.scripts]
stoma = "src.cli.main:app"

